clusters/home-cluster/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: home-samba
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-pvc-data
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: samba-pvc
        - name: device-dri
          hostPath:
            path: /dev/dri
        - name: device-dma-heap
          hostPath:
            path: /dev/dma_heap
        - name: device-mali
          hostPath:
            path: /dev/mali0
        - name: device-rga
          hostPath:
            path: /dev/rga
        - name: device-mpp-service
          hostPath:
            path: /dev/mpp_service
      containers:
        - env:
            - name: JELLYFIN_PublishedServerUrl
              value: 192.168.1.113 # The IP, make sure it's the same as the IP in the TCP and UDP service yaml
            - name: PGID
              value: "\x36\x35\x35\x34\x31" # < ASCII code for '65541'
            - name: PUID
              value: "\x31\x30\x34\x34" #< ACII code for '1044'
            - name: TZ
              value: Europe/Amsterdam
          securityContext:
            privileged: true # Container must run as privileged inside of the pod, required for hardware acceleration
          image: ghcr.io/linuxserver/jellyfin:arm64v8-latest@sha256:7185f27077da01919e76ba746884ae9fbbf4a90ec54f826471a1b3420d2e4322
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 7359
              name: discovery-udp
              protocol: UDP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data
              name: jellyfin-data
            # Below are the path to mount devices for hardware acceleration
            - mountPath: /dev/dri
              name: device-dri
            - mountPath: /dev/dma_heap
              name: device-dma-heap
            - mountPath: /dev/mali0
              name: device-mali
            - mountPath: /dev/rga
              name: device-rga
            - mountPath: /dev/mpp_service
              name: device-mpp-service

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      priorityClassName: high-priority
